2007-09-05  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/NodeState.cs: Fix build.

2007-09-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/NodeState.cs: Fixed little issue in NodeState.

2007-09-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs,
	  MonoDevelop.Ide.Gui.Pads/NodeState.cs, MonoDevelop.Ide.Gui/Document.cs,
	  MonoDevelop.Ide.Gui/ProjectOperations.cs,
	  MonoDevelop.Ide.Gui/DefaultWorkbench.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Updated to the
	  ICustomXmlSerializer infrastructure.

2007-09-05  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/CodeTranslationFileDescriptionTemplate.cs: Add
	  support for displaying the CodeDom autogeneration notice (useful for
	  designer-maintained partial classes).

2007-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/NodeState.cs: Option values must be loaded as
	  boolean.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/CodeTranslationFileDescriptionTemplate.cs: Use
	  non-deprecated CodeDom parse API. Some refactoring.
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs: Updated.
	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Show warnings.

2007-09-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/NodeState.cs,
	  MonoDevelop.Ide.Gui/ProjectOperations.cs: Fixed a bug in user
	  preferences file persistence.

2007-09-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Userpref errors are now catched
	  silently.
	* MonoDevelop.Ide.Tasks/Task.cs, MonoDevelop.Ide.Tasks/TaskService.cs: Fixed
	  remaining issue with bug 82282.

2007-09-03  Eric Butler <eric@extremeboredom.net>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs,
	  MonoDevelop.Ide.addin.xml:
	  Add "Include To Project" menu item to Folders that recursively adds
	  files.
