@@ -328,6 +328,7 @@
     <File name="./options/KeyBindingSchemeVisualStudio.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./MonoDevelop.Ide.Codons/FileFilterCodon.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Ide.ExternalTools/ExternalToolService.cs" subtype="Code" buildaction="Compile" />
+    <File name="./MonoDevelop.Ide.Templates/FileTemplateReference.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="False" refto="gecko-sharp, Version=2.0.0.0, Culture=neutral, PublicKeyToken=ccf7d78a55e9f021" />
